# edna2023

./: .gitignore  README.md  ZED.md  docker-compose.yml  edna.service  err  onexit.sh  startup.sh  temp
.devcontainer/: .env  Dockerfile  devcontainer.json  init.sh  omniverse.toml  postCreate.sh  postStart.sh  ros2-galactic-desktop-main.sh
docker/developer/: Dockerfile  README.md  build
docker/developer-isaac-ros/: Dockerfile  README.md  build  entrypoint.sh
docker/developer-isaac-ros/install-scripts/: install-isaac-pkgs  install-ros-deps
docker/developer-zed/: Dockerfile  build  ros_entrypoint_jetson.sh
docker/developer/install-scripts/: install-common  install-docker  install-ros-deps  install-rosdeps  install-rtab
docker/edna/: Dockerfile  build  omniverse.toml
docker/edna/utility-scripts/: test
docker/galactic-isaac/: Dockerfile  build
docker/galactic-isaac/install-scripts/: install-common
docker/install-scripts/: install-ros2
docker/isaac/: Dockerfile  args  build
docker/isaac-sim/: Dockerfile  build
docker/isaac/install-scripts/: install-common
docker/jetson/: Dockerfile  README.md  build  entrypoint.sh
docker/jetson-isaac-ros/: Dockerfile  README.md
docker/jetson-zed/: Dockerfile  build
docker/jetson/install-scripts/: install-rosdeps
isaac/: README.md
isaac/Replicator/: ReplicatorParameters.yaml
isaac/Swervesim/: rlgpu_conda_env.yml  setup.py
isaac/Swervesim/swervesim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
isaac/assets/2023_field/: FE-2023.usd
isaac/assets/2023_field_cpu/: FE-2023.usd
isaac/assets/2023_field_gpu/: FE-2023.usd
isaac/assets/Charge Station/: Assembly-1.usd
isaac/assets/Charge Station - Copy/: Assembly-1.usd
isaac/assets/ChargeStation/: Assembly-1.usd
isaac/assets/ChargeStation-Copy/: Assembly-1.usd  Assembly_1_base.usd  Assembly_1_edit.usd
isaac/assets/substation/: TE-23060.STEP  substation_base.usd  substation_edit.usd
isaac/assets/substation_01/: substation_base.usd  substation_edit.usd
isaac/assets/swerve/: swerve_instanceable.usd
isaac/assets/te-23060/: te_23060.usd  te_23061.usd  te_23064_rear_frame.usd  te_23066.usd
rio/: README.md  motor_poc.py  physics.py  requirements.txt  robot.py  ros2robot.py  simgui-ds.json  simgui-window.json  simgui.json  test-robot.py  testrobot.py
rio/POC/limitswitch_test/: robot.py
rio/POC/motion_magic_poc/: .deploy_cfg  robot.py  test.py
rio/dds/: dds.py  encoder_info_writer.py  joint_commands_reader.py  joystick_writer.py
rio/dds/xml/: Header.xml  ROS_RTI.xml  Time.xml
rio/hardware_interface/: armcontroller.py  drivetrain.py  joystick.py
rio/motion_magic_poc/: MotionProfile.py  robot.py
rio/pneumatics_test/: robot.py
rio/sim/: cancoderSim.py  physics.py  talonFxSim.py
scripts/: dds-ping  deploy-pi  deploy-remote  docker-setup.sh  gym  gym-setup  isaac  isaac-ros  isaac-setup  launch  local-setup.sh  log-pi  quickpub.py  remote  remote-rebuild  remote-setup  restart-ros2  tests
scripts/config/: SN39192289.conf  omniverse.toml  remote-config  remote-config-orin
scripts/real-startup/jetson/: startup.sh  stop.sh
scripts/real-startup/pi/: edna.service  post-recieve  startup.sh
src/arm_description/: CMakeLists.txt  package.xml
src/arm_hardware/: CMakeLists.txt  package.xml
src/arm_hardware/src/: isaac_drive.cpp
src/edna_bringup/: CMakeLists.txt  package.xml
src/edna_bringup/config/: controllers.yaml  description.rviz  joint_trajectory_controller.yaml  joystick.yaml  mapper_params.yaml  mapping.yaml  real.rviz  riodebug.rviz  teleop-control.yaml  view.rviz  vslam.rviz  xbox-holonomic-real.config.yaml  xbox-holonomic-sim.config.yaml  xbox-holonomic.config.yaml  xbox-real.yaml  xbox-sim.yaml  zed-config-common.yaml
src/edna_bringup/launch/: control.launch.py  controlLayer.launch.py  debugLayer.launch.py  debugtools.launch.py  foxglove.launch.py  isaac.launch.py  namespaceutil.py  navigationLayer.launch.py  real-rviz.launch.py  real.launch.py  rio-debug.launch.py  rtab.launch.py  rviz.launch.py  rviz_test.launch.py  slam_toolbox.launch.py  teleopLayer.launch.py  test_hw.launch.py  vslam.py  zed2i.launch.py  zedLayer.launch.py
src/edna_bringup/scripts/: parseRviz.py
src/edna_debugger/: package.xml  setup.cfg  setup.py
src/edna_debugger/edna_debugger/: debugger.py  flow_layout.py  joint_state_publisher.py
src/edna_description/: CMakeLists.txt  swerve.urdf
src/edna_description/config/: view.rviz
src/edna_interfaces/: CMakeLists.txt  package.xml
src/edna_interfaces/srv/: SetBool.srv
src/edna_tests/: package.xml  setup.cfg  setup.py
src/frc_auton/: package.xml  setup.cfg  setup.py
src/imu_sensor/: imu.urdf.xacro  imu_listener.cpp
src/joint_trajectory_controller/: CMakeLists.txt  package.xml
src/joint_trajectory_teleop/: package.xml  setup.cfg  setup.py
src/joy/: CMakeLists.txt
src/joy/src/: joy.cpp
src/rviz-plugin-zed-od/: CMakeLists.txt
src/swerve_controller/: CMakeLists.txt  package.xml  swerve_plugin.xml
src/swerve_controller/include/swerve_controller/: speed_limiter.hpp  swerve_controller.hpp  visibility_control.h
src/swerve_controller/src/: speed_limiter.cpp  swerve_controller.cpp
src/swerve_description/: CMakeLists.txt  package.xml  swerve.urdf
src/swerve_description/config/: xbox-holonomic.config.yaml
src/swerve_description/launch/: isaac.launch.py  rviz_gui.launch.py  test_hw.launch.py
src/swerve_description/urdf/control/: drive.xacro
src/swerve_description/urdf/parts/: square_chassis.xacro  swerve_axle.xacro
src/swerve_description/urdf/robots/: swerve.urdf.xacro
src/swerve_description/urdf/util/: materials.xacro
src/swerve_hardware/: CMakeLists.txt  package.xml  swerve_hardware.xml
src/teleop_twist_joy/: CMakeLists.txt  package.xml
src/teleop_twist_joy/launch/: teleop-launch.py
src/teleop_twist_joy/src/: imu_listener.cpp  teleop_twist_joy.cpp
src/test_swerve_control/: package.xml  setup.cfg  setup.py
src/writer_srv/: CMakeLists.txt  package.xml
src/zed-ros2-interfaces/: CMakeLists.txt  README.md  package.xml
src/zed_components/: CMakeLists.txt
(+576 files in other folders)
